*gitlab-ce-8.14.4 (12 Dec 2016)

  12 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.4.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.14.4, latest bugfix release

*gitlab-ce-8.14.3 (08 Dec 2016)

  08 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.3.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab 8.14.3

*gitlab-ce-8.14.2 (05 Dec 2016)

  05 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.2.ebuild:
  www-apps/gitlab-ce:  added ebuild for latest bugfix release v8.14.2

  23 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/gitlab-8.10.6-sidekiq.service, -files/gitlab-8.13.0-sidekiq.init,
  -files/gitlab-8.13.0-unicorn.init, -gitlab-ce-8.12.7.ebuild,
  -gitlab-ce-8.13.0.ebuild, -gitlab-ce-8.13.3.ebuild, -gitlab-ce-8.13.5.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  pruned old ebuilds

*gitlab-ce-8.14.0 (23 Nov 2016)
*gitlab-ce-8.14.0_rc4 (23 Nov 2016)

  23 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-8.14.0-database.yml.patch, +gitlab-ce-8.14.0.ebuild,
  +gitlab-ce-8.14.0_rc4.ebuild, -gitlab-ce-8.14.0_rc2.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.14.0

*gitlab-ce-8.13.6 (17 Nov 2016)

  17 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.13.6.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.13.6

*gitlab-ce-8.13.5 (11 Nov 2016)
*gitlab-ce-8.14.0_rc1 (11 Nov 2016)

  11 Nov 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.13.5.ebuild,
  +gitlab-ce-8.14.0_rc1.ebuild, -gitlab-ce-8.12.0_rc6.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.13.5 and updated the
  bleeding-edge ones

  04 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
  files/gitlab-8.13.3-sidekiq.init, files/gitlab-8.13.3-unicorn.init:
  www-apps/gitlab-ce:  fixed init script for gitlab-ce-8.13.3

  03 Nov 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  updated ebuild for gitlab-9999
